src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html, body {
  height: 100%;
  width: 100%;
}

body {
  font-family: sans-serif;
  background-color: white;
}
:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');


  /* color: rgb(var(--foreground-rgb)); */
  /* background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb)); */


/* .desc p,.desc h2,.desc h3,.desc h5,.desc h6,.desc span{
  color: #212529 !important;
  font-weight: 300 !important;
  font-size: 1.125rem !important;
  line-height: 1.75rem !important;.p
  background-color: transparent !important;
  font-family: "Inter", sans-serif  !important;
} */
/* .desc h1{
  font-size: 1.75rem !important;
} */

/* b, strong{
  font-weight: bold;
} */

/* .dark .desc p,.dark .desc h1,.dark .desc h2,.dark .desc h3,.dark .desc h5,.dark .desc h6,.dark .desc span{
  color: rgb(156 163 175) !important;
  background-color: #121212!important;
} */
/* .h-setpage{
  height: calc(100vh - 4.5rem);
  background-color: white !important;
} */

  /* body{
    font-family: "Inter", sans-serif !important;
  } */
  .text-balance {
    text-wrap: balance;
  }
  .text-black-300{
    color: #1B1B1B;
  }
  .bg-blue-200{
    background-color: #DFEDFFE5;
  }
  .text-black-500{
    color: #2D384C;
  }
  .border-gray-100{
    border-color: #EDEDED;
  }
  .text-gray-300{
    color: #525252;
  }
  .shadow-btn{
    box-shadow: 0px 1px 6px 0px #00000040;
  }
  .text-grey-600{
    color: #57575C;
  }
  .bg-gray-200{
    background-color: #F6F6F7;
  }
  .border-gray-500{
    border-color: #8D8D94;
  }
  .shadow-drop{
    box-shadow: 0px 8px 24px -4px #0000001F;
  }
  .text-\[40px\] {
    font-size: 40px;
  }
  
  .mt-\[60px\] {
    margin-top: 60px;
  }
  
  .py-\[60px\] {
    padding-top: 60px;
    padding-bottom: 60px;
  }
  .text-\[40px\] {
  font-size: 40px;
}

.mt-\[60px\] {
  margin-top: 60px;
}

.py-\[60px\] {
  padding-top: 60px;
  padding-bottom: 60px;
}

.mb-\[22px\] {
  margin-bottom: 22px;
}

